--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "await": "^0.2.6",
     "fast-image-zoom": "^7.0.1",
     "jquery": "^3.6.0",
+    "jquery-validation": "^1.19.5",
     "lazysizes": "^5.3.2"
   }
 }
